# cli-status-board

./: CARGO_README.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  demo.rs  minimal.rs
src/: column.rs  internal_state.rs  lib.rs  state.rs  task.rs  task_id.rs
